--- a/package.json
+++ b/package.json
@@ -2,30 +2,28 @@
   "name": "api-filmscatalog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
+  "type": "commonjs",
   "scripts": {
     "start": "nodemon --files --watch \"src//\" --exec \"ts-node --files src/server.ts\" -e ts",
     "dev:debug": "node -r ts-node/register --inspect src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles"
   },
-  "author": "",
+  "author": "Paulo Sergio Garcia <devsergionunes@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
     "express-async-errors": "^3.1.1",
     "pg": "^8.2.2",
     "pg-promise": "^10.11.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/pg": "^8.6.5",
-    "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
     "@typescript-eslint/parser": "^5.24.0",
     "eslint": "^7.32.0 || ^8.2.0",
@@ -34,6 +32,9 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.2"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
